tests/ui/array-slice-vec/slice-2.stderr
error[E0608]: cannot index into a value of type `Foo`
  --> $DIR/slice-2.rs:7:7
   |
LL |     &x[..];
   |       ^^^^

error[E0608]: cannot index into a value of type `Foo`
  --> $DIR/slice-2.rs:8:7
   |
LL |     &x[Foo..];
   |       ^^^^^^^

error[E0608]: cannot index into a value of type `Foo`
  --> $DIR/slice-2.rs:9:7
   |
LL |     &x[..Foo];
   |       ^^^^^^^

error[E0608]: cannot index into a value of type `Foo`
  --> $DIR/slice-2.rs:10:7
   |
LL |     &x[Foo..Foo];
   |       ^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0608`.
